tests/integration/languages/snapshots/r#mod__integration__languages__extractor__test_rust_type_alias_extraction.snap
---
source: tests/integration/languages/extractor.rs
expression: "serde_json::to_string_pretty(&snapshot_data).unwrap()"
---
{
  "chunks": [
    {
      "chunk_type": "File",
      "comment_ranges": [],
      "content": "\npub type UserId = u64;\npub type DatabaseResult<T> = Result<T, String>;\ntype Point = (f64, f64);\n",
      "end_line": 4,
      "language": "rust",
      "name": "entire_file",
      "original_indentation": 0,
      "start_line": 1
    },
    {
      "chunk_type": "TypeAlias",
      "comment_ranges": [],
      "content": "pub type UserId = u64;",
      "end_line": 2,
      "language": "rust",
      "name": "UserId",
      "original_indentation": 0,
      "start_line": 2
    },
    {
      "chunk_type": "TypeAlias",
      "comment_ranges": [],
      "content": "pub type DatabaseResult<T> = Result<T, String>;",
      "end_line": 3,
      "language": "rust",
      "name": "DatabaseResult",
      "original_indentation": 0,
      "start_line": 3
    },
    {
      "chunk_type": "TypeAlias",
      "comment_ranges": [],
      "content": "type Point = (f64, f64);",
      "end_line": 4,
      "language": "rust",
      "name": "Point",
      "original_indentation": 0,
      "start_line": 4
    }
  ],
  "source_code": "\npub type UserId = u64;\npub type DatabaseResult<T> = Result<T, String>;\ntype Point = (f64, f64);\n",
  "test_name": "test_rust_type_alias_extraction",
  "total_chunks": 4
}
