tests/integration/languages/snapshots/r#mod__integration__languages__extractor__test_swift_protocol_extraction.snap
---
source: tests/integration/languages/extractor.rs
expression: "serde_json::to_string_pretty(&snapshot_data).unwrap()"
---
{
  "chunks": [
    {
      "chunk_type": "File",
      "comment_ranges": [],
      "content": "\nprotocol Drawable {\n    func draw()\n    func area() -> Double\n}\n\nprotocol Comparable {\n    func isGreaterThan(_ other: Self) -> Bool\n}\n",
      "end_line": 9,
      "language": "swift",
      "name": "entire_file",
      "original_indentation": 0,
      "start_line": 1
    },
    {
      "chunk_type": "Interface",
      "comment_ranges": [],
      "content": "protocol Drawable {\n    func draw()\n    func area() -> Double\n}",
      "end_line": 5,
      "language": "swift",
      "name": "Drawable",
      "original_indentation": 0,
      "start_line": 2
    },
    {
      "chunk_type": "Interface",
      "comment_ranges": [],
      "content": "protocol Comparable {\n    func isGreaterThan(_ other: Self) -> Bool\n}",
      "end_line": 9,
      "language": "swift",
      "name": "Comparable",
      "original_indentation": 0,
      "start_line": 7
    }
  ],
  "source_code": "\nprotocol Drawable {\n    func draw()\n    func area() -> Double\n}\n\nprotocol Comparable {\n    func isGreaterThan(_ other: Self) -> Bool\n}\n",
  "test_name": "test_swift_protocol_extraction",
  "total_chunks": 3
}
