tests/integration/languages/snapshots/r#mod__integration__languages__extractor__test_typescript_namespace_extraction.snap
---
source: tests/integration/languages/extractor.rs
expression: "serde_json::to_string_pretty(&snapshot_data).unwrap()"
---
{
  "chunks": [
    {
      "chunk_type": "File",
      "comment_ranges": [],
      "content": "\nnamespace Utils {\n    export function formatDate(date: Date): string {\n        return date.toISOString();\n    }\n\n    export function calculateAge(birthDate: Date): number {\n        const today = new Date();\n        return today.getFullYear() - birthDate.getFullYear();\n    }\n}\n\nnamespace Api {\n    export interface Response<T> {\n        data: T;\n        status: number;\n    }\n}\n",
      "end_line": 18,
      "language": "typescript",
      "name": "entire_file",
      "original_indentation": 0,
      "start_line": 1
    },
    {
      "chunk_type": "Module",
      "comment_ranges": [],
      "content": "namespace Utils {\n    export function formatDate(date: Date): string {\n        return date.toISOString();\n    }\n\n    export function calculateAge(birthDate: Date): number {\n        const today = new Date();\n        return today.getFullYear() - birthDate.getFullYear();\n    }\n}",
      "end_line": 11,
      "language": "typescript",
      "name": "Utils",
      "original_indentation": 0,
      "start_line": 2
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "    export function formatDate(date: Date): string {\n        return date.toISOString();\n    }",
      "end_line": 5,
      "language": "typescript",
      "name": "formatDate",
      "original_indentation": 11,
      "start_line": 3
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "    export function calculateAge(birthDate: Date): number {\n        const today = new Date();\n        return today.getFullYear() - birthDate.getFullYear();\n    }",
      "end_line": 10,
      "language": "typescript",
      "name": "calculateAge",
      "original_indentation": 11,
      "start_line": 7
    },
    {
      "chunk_type": "Module",
      "comment_ranges": [],
      "content": "namespace Api {\n    export interface Response<T> {\n        data: T;\n        status: number;\n    }\n}",
      "end_line": 18,
      "language": "typescript",
      "name": "Api",
      "original_indentation": 0,
      "start_line": 13
    },
    {
      "chunk_type": "Interface",
      "comment_ranges": [],
      "content": "    export interface Response<T> {\n        data: T;\n        status: number;\n    }",
      "end_line": 17,
      "language": "typescript",
      "name": "Response",
      "original_indentation": 11,
      "start_line": 14
    }
  ],
  "source_code": "\nnamespace Utils {\n    export function formatDate(date: Date): string {\n        return date.toISOString();\n    }\n\n    export function calculateAge(birthDate: Date): number {\n        const today = new Date();\n        return today.getFullYear() - birthDate.getFullYear();\n    }\n}\n\nnamespace Api {\n    export interface Response<T> {\n        data: T;\n        status: number;\n    }\n}\n",
  "test_name": "test_typescript_namespace_extraction",
  "total_chunks": 6
}
