tests/integration/languages/snapshots/r#mod__integration__languages__extractor__test_typescript_type_alias_extraction.snap
---
source: tests/integration/languages/extractor.rs
expression: "serde_json::to_string_pretty(&snapshot_data).unwrap()"
---
{
  "chunks": [
    {
      "chunk_type": "TypeAlias",
      "comment_ranges": [],
      "content": "type Status = 'pending' | 'completed' | 'failed';",
      "end_line": 2,
      "language": "typescript",
      "name": "Status",
      "original_indentation": 0,
      "start_line": 2
    },
    {
      "chunk_type": "TypeAlias",
      "comment_ranges": [],
      "content": "type UserId = number;",
      "end_line": 3,
      "language": "typescript",
      "name": "UserId",
      "original_indentation": 0,
      "start_line": 3
    },
    {
      "chunk_type": "TypeAlias",
      "comment_ranges": [],
      "content": "type ApiResponse<T> = {\n    data: T;\n    error?: string;\n};",
      "end_line": 7,
      "language": "typescript",
      "name": "ApiResponse",
      "original_indentation": 0,
      "start_line": 4
    }
  ],
  "source_code": "\ntype Status = 'pending' | 'completed' | 'failed';\ntype UserId = number;\ntype ApiResponse<T> = {\n    data: T;\n    error?: string;\n};\n",
  "test_name": "test_typescript_type_alias_extraction",
  "total_chunks": 3
}
