tests/integration/languages/snapshots/r#mod__integration__languages__extractor__test_zig_struct_extraction.snap
---
source: tests/integration/languages/extractor.rs
expression: "serde_json::to_string_pretty(&snapshot_data).unwrap()"
---
{
  "chunks": [
    {
      "chunk_type": "File",
      "comment_ranges": [],
      "content": "\nconst Point = struct {\n    x: f32,\n    y: f32,\n};\n\npub const Config = struct {\n    debug: bool,\n    verbose: bool,\n};\n",
      "end_line": 10,
      "language": "zig",
      "name": "entire_file",
      "original_indentation": 0,
      "start_line": 1
    },
    {
      "chunk_type": "CodeBlock",
      "comment_ranges": [],
      "content": "const Point = struct {\n    x: f32,\n    y: f32,\n};",
      "end_line": 5,
      "language": "zig",
      "name": "struct",
      "original_indentation": 0,
      "start_line": 2
    },
    {
      "chunk_type": "CodeBlock",
      "comment_ranges": [],
      "content": "pub const Config = struct {\n    debug: bool,\n    verbose: bool,\n};",
      "end_line": 10,
      "language": "zig",
      "name": "struct",
      "original_indentation": 0,
      "start_line": 7
    }
  ],
  "source_code": "\nconst Point = struct {\n    x: f32,\n    y: f32,\n};\n\npub const Config = struct {\n    debug: bool,\n    verbose: bool,\n};\n",
  "test_name": "test_zig_struct_extraction",
  "total_chunks": 3
}
